--- a/app/views/user_limit.erb
+++ b/app/views/user_limit.erb
@@ -1,2 +1,2 @@
 You tried to add to many songs at once!
-<a href="/playlist/<%= @playlist.name%>">Go back to the playlist</a>
+<a href="/playlist/<%= @playlist.slug%>">Go back to the playlist</a>
